tests/NormalTests/paczka1/fuzzy1/99225542.err
Error in line 2: n6s S204 65,0
Error in line 7: Q1KAMDRQTtl S2&4 35,9
Error in line 8: Q1KAMDRQTtl S204 88,3
Error in line 9: Q1KAMDRQTtl A666 29,5
Error in line 14: Q1KAMDRQTtl A861 53,6
Error in line 20: AQAvqJ5W3ZF A320 50,9
